[package]
name = "deflate64"
version = "0.1.4-SNAPSHOT"
edition = "2021"

license = "MIT"
authors = ["anatawa12 <anatawa12@icloud.com>"]
description = "Deflate64 implementation based on .NET's implementation"
homepage = "https://github.com/anatawa12/deflate64-rs#readme"
repository = "https://github.com/anatawa12/deflate64-rs"
readme = "README.md"
keywords = ["deflate", "deflate64", "compression"]
categories = ["compression"]

exclude = [
    ".github/**",
    "tests/**",
    "test-assets/**",
]

[dependencies]
